[package]
name = "ic-verify-bls-signature"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "A library for handling BLS signatures"

[dependencies]
bls12_381 = { version = "0.7.1", default-features = false, features = [
    "groups",
    "pairings",
    "experimental",
] }
pairing = { version = "0.22" }
lazy_static = { version = "1", optional = true }
rand = { version = "0.8.5", default-features = false }
sha2 = { version = "0.9", default-features = false }
hex = { version = "0.4", optional = true }
cfg-if = "1.0.0"

[features]
default = ["alloc"]
alloc = [
    "bls12_381/alloc",
    "rand/alloc",
    "rand/std",
    "rand/std_rng",
    "rand/getrandom",
    "hex/alloc",
    "lazy_static",
    "hex",
]
